# azure-iot-gateway-sdk

./: CMakeLists.txt
core/src/: gateway.c
modules/: CMakeLists.txt
modules/hello_world/: CMakeLists.txt
modules/hello_world/inc/: hello_world.h
modules/hello_world/src/: hello_world.c
modules/iothubhttprelay/: CMakeLists.txt
modules/iothubhttprelay/inc/: iothubhttprelay.h  iothubhttprelay_hl.h
modules/iothubhttprelay/src/: iothubhttprelay.c  iothubhttprelay_hl.c
modules/iothubhttprelay/tests/iothubhttp_hl_unittests/: CMakeLists.txt
modules/iothubhttprelay/tests/iothubhttp_unittests/: CMakeLists.txt
modules/reader/: CMakeLists.txt
modules/reader/inc/: reader.h  reader_hl.h
modules/reader/src/: reader.c  reader_hl.c
samples/ble_gateway_hl/src/: gateway_sample.json
samples/hello_world/: CMakeLists.txt
samples/hello_world/src/: hello_world_lin.json  hello_world_win.json  main.c
